css/android-layout.css
html, body {
	min-height: 100%;
}

body {
	height: 100%;
}

.output-area {
	box-sizing: border-box;
}

*, *:before, *:after {
	box-sizing: inherit;
}

/* ===== The Phone and Screen ===== */

.phone {
	/*position: relative;*/
	position: absolute;
	top: 0;
	right: 0;
	/*background-image: url(../images/generic-android-phone-png.png);*/
	background-repeat: no-repeat;
	/*background-size: 50%;*/
	width: 360px;
	height: 640px;
	/*padding-bottom: 206%; /* preserves the aspect ratio */
}

.phone canvas {
	max-width:100%;
	max-height:100%;
	margin:0 auto;
	display: block;
}

.screen {
	position: absolute;
	right:0;
	bottom:0;
	width: 360px;
	height: 640px;
	
	top: 0px;
	right: 0px;
	/*opacity:0.5;*/
	/*transform: translateY(-600px) translateX(280px) scale(0.333333);*/
	
	/*z-index: -1;*/
}

.screen-wrapper {
	position: absolute;
	height: 100%;
	width: 100%;
	background-color: #eee;
	overflow: hidden;
}



/* Utilities */
.absolute {
	position: absolute;
}

/* ===== Styling for Android Layout XML ===== */

.element-outlines-enabled .screen * {
	outline: solid 2px rgba(255,0,0,0.3);
}

.element-outlines-enabled .screen .hovering {
	outline-color: rgba(155,0,0,1);
}

/* Layout */

.layout_width-match_parent {
	width: 100%;
}

.layout_height-match_parent {
	height: 100%;
}

.layout_width-wrap_content {
	display: table;
}


.LinearLayout {
	display: -webkit-flex!important;
	display: flex!important;
    flex-direction: row;
    overflow: hidden;
}

.LinearLayout.orientation-vertical {
    flex-direction: column;
}

.FrameLayout {
	/*position: relative;*/
}

.FrameLayout > * {
	position: absolute;
}


/* may be wrong... */
.RelativeLayout {
	/*position: relative;*/
}

.RelativeLayout > * {
	position: absolute;
}

.TextView {
	display: table;
	overflow-wrap: break-word;
	overflow: hidden;
}


/*.output-area :not(.layout_height-wrap_content) {
	flex-grow: 1;
}
*/

/* ImageView Attributes */
.scaleType-centerCrop {
	background-size: cover;
	background-position: center;
}

.scaleType-centerInside {
	background-size: contain;
	background-position: center;
	background-repeat: no-repeat;
}

.gravity-center,
.gravity-center_horizontal {
	text-align: center;
}

.gravity-center .helper-child,
.gravity-center_vertical .helper-child {
	margin-top: auto;
	margin-bottom: auto;
}

.gravity-left {
	text-align: left;
}

.gravity-right {
	text-align: right;
}

.gravity-top .helper-child {
	margin-top: 0;
	margin-bottom: auto;
}

.gravity-bottom .helper-child {
	margin-top: auto;
	margin-bottom: 0;
}


.layout_width-match_parent.gravity-center,
.layout_width-match_parent.gravity-center_vertical,
.layout_width-match_parent.gravity-bottom {
	display: -webkit-flex!important;
	display: flex!important;
}

